syntax = "proto3";

package auth;
option go_package = "./authpb";

message LoginRequest {
  string user_email = 1;
  string password = 2;
}

message LoginResponse {
  string firstName = 1;
  string lastName =2;
  string token = 3;
}

message isLoggedInRequest{
}
message isLoggedInResponse{
  bool  isLoggedIn = 1;
}
message LogoutRequest {}

message LogoutResponse {}

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Logout(LogoutRequest) returns (LogoutResponse);
  rpc IsLoggedIn(isLoggedInRequest) returns (isLoggedInResponse);
}